<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Product\nCalculator</string>
    <string name="empty_products_message">Product list is empty\nLet\'s add something!</string>
    <string name="formatted_place_row">%s</string>
    <string name="formatted_price">%,.2f</string>
    <string name="formatted_weight">%,.2f</string>
    <string name="formatted_summary_price">%,.2f</string>
    <string name="add_product_label">Add</string>
    <string name="product_name_label">Denomination</string>
    <string name="ae_title">Describe product</string>
    <string name="weight_label">Product weight</string>
    <string name="row_label">Place</string>
    <string name="price_per_1_label">Price️</string>
    <string name="note_label">Note</string>
    <string name="success_updating_message">Product added successfully!</string>
    <string name="fail_empty_fields">Fill all fields!</string>
    <string name="success_updated">Item edited</string>
    <string name="success_deleted">Item deleted</string>
    <string name="edit_button_label">Edit</string>
    <string name="wasted_money">Money spent = %,d</string>
    <string name="all_money">Total money = %,d</string>
    <string name="rest_money">Money rest = </string>
    <string name="editing_tool_label">Editing</string>
    <string name="delete_label">Delete</string>
    <string name="product_history_label">History</string>
    <string name="date_format">y E d LLLL</string>
    <string name="cd_editing_btn">Button for editing amount of total money</string>
    <string name="all_money_day">All money for day</string>
    <string name="apply_label">Apply</string>
    <string name="cancel_label">Cancel</string>
    <string name="collapse_dt_ds">Button expanding list of expenditures</string>
    <string name="collapse_title_product">Product costs = %,d</string>
    <string name="collapse_title_expenditure">Expenditure costs = %,d</string>
    <string name="ae_expenditure_title">Describe expenditure</string>
    <string name="field_expenditure_helper">Expenditure name</string>
    <string name="expenditure_cost_helper">Cost</string>
    <string name="selecting_title">What are we going to add?</string>
    <string name="expenditure_label">Expenditures</string>
    <string name="product_label">Product</string>
    <string name="list_title">Purchases</string>
    <string name="expenditure_updated">Item edited</string>
    <string name="expenditure_added">Expenditure added successfully!</string>
    <string name="expenditure_deleted">Item deleted</string>
    <string name="not_valid_formula">Error in expression!</string>
    <string name="summary_price_label">Total</string>
    <string name="not_numbered_text">Wrong format!</string>
    <string name="too_old_note">The old entry cannot be edited!</string>
    <string name="engine_error_message">An error has occurred! Tell the developer!</string>
    <string name="profile_label">Settings</string>
    <string name="weight_selecting_label">Select unit of weight</string>
    <string name="currency_selecting_label">Choose your currency</string>
    <string name="about_app_label">About app</string>
    <string name="app_icon_cd">app\'s icon</string>
    <string name="version_label">Version %s</string>
    <string name="share_label">Share</string>
    <string name="info_label">Info</string>
    <string name="review_title_label">Like the app?\nAppreciate it at its true worth!</string>
    <string name="rate_button_label">Rate</string>
    <string name="star_image_cd">Star image</string>
    <string name="weight_emoji" translatable="false">⚖️</string>
    <string name="money_emoji" translatable="false">🪙</string>
    <string name="share_app_label">Tell about app</string>
    <string name="copy_link_label">Copy link</string>
    <string name="feedback_button_label">Contact developer</string>
    <string name="feedback_title">Feedback form</string>
    <string name="send_feedback_label">Send feedback</string>
    <string name="problem_description_hint">Describe your problem or feedback here</string>
    <string name="feedback_contact_hint">Write your contact here (optional)</string>
    <string name="feedback_file_field">You can attach one file, up to 20 MB size</string>
    <string name="feedback_success_message">Feedback sent to developer, thank you!</string>
    <string name="error_title">Error occurred</string>
    <string name="back_label">Go back</string>
    <string name="error_no_internet">No internet connection, please check your internet connection and try again later</string>
    <string name="error_empty_feedback_message">Please fill field with feedback description</string>
    <string name="error_message_general">Something went wrong, try again later please</string>
    <string name="error_file_too_big_message">File is over than 20 MB</string>
</resources>