<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ae_fields_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:helperText="@string/product_name_label"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/placeInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:helperText="@string/row_label"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/placeInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightInputContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:helperText="@string/weight_label"
                app:suffixText="@string/weight_emoji">

                <com.human_developing_soft.productcalc.calculator_keyboard.ui.KeyboardEditText
                    android:id="@+id/weightInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceInputContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                app:helperText="@string/price_per_1_label"
                app:suffixText="@string/money_emoji">

                <com.human_developing_soft.productcalc.calculator_keyboard.ui.KeyboardEditText
                    android:id="@+id/priceInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sumPriceInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:helperText="@string/summary_price_label"
            app:suffixText="@string/money_emoji">

            <com.human_developing_soft.productcalc.calculator_keyboard.ui.KeyboardEditText
                android:id="@+id/sumPriceInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:helperText="@string/note_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>