<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/selecting_title"
        android:textAppearance="@style/DialogTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/expenditureSelectingContainer"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/selecting_choice_bg"
        android:elevation="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@id/productSelectingContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectingTitle">

        <TextView
            android:id="@+id/expenditureSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/expenditure_label"
            android:textAppearance="@style/SelectingDialogText"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/productSelectingContainer"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/selecting_choice_bg"
        android:clickable="true"
        android:focusable="true"
        android:elevation="12dp"
        app:layout_constraintStart_toEndOf="@id/expenditureSelectingContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectingTitle">

        <TextView
            android:id="@+id/productSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_label"
            android:textAppearance="@style/SelectingDialogText"/>
    </FrameLayout>

    <Button
        android:id="@+id/selectingCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CancelButton"
        android:text="@string/cancel_label"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productSelectingContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>