<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_app_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:textAppearance="@style/DialogTitleText"
        android:text="@string/review_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/starImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_stars"
        app:layout_constraintTop_toBottomOf="@id/reviewTitle"
        app:layout_constraintBottom_toTopOf="@id/rateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/star_image_cd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:background="@drawable/rate_btn_bg"
        android:textSize="24sp"
        android:text="@string/rate_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>