<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dayEditingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SelectingDialogText"
        android:text="@string/all_money_day"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moneyInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:suffixText="руб"
        app:layout_constraintTop_toBottomOf="@id/dayEditingLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.human_developing_soft.productcalc.calculator_keyboard.KeyboardEditText
            android:id="@+id/moneyInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/apply_label"
        android:theme="@style/ApplyButton"
        app:layout_constraintBottom_toTopOf="@id/keyboardContainer"
        app:layout_constraintTop_toBottomOf="@id/moneyInputContainer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/cancel_label"
        android:theme="@style/CancelButton"
        app:layout_constraintBottom_toTopOf="@id/keyboardContainer"
        app:layout_constraintTop_toBottomOf="@id/moneyInputContainer"
        app:layout_constraintEnd_toStartOf="@id/applyButton" />

    1<FrameLayout
        android:id="@+id/keyboardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>