<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/FragmentRoot"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingToolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@color/white"
            app:title="@string/profile_label"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightSettingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/weight_selecting_label"
        app:layout_constraintTop_toBottomOf="@id/settingToolbarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/weightSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/weightSetting"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currencySettingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/currency_selecting_label"
        app:layout_constraintTop_toBottomOf="@id/weightSettingContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/currencySetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/currencySetting"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>