<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:helperTextEnabled="true"
            app:helperText="@string/field_expenditure_helper"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:suffixText="⚖️/🪙️"
            app:helperText="@string/expenditure_cost_helper"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/nameInputContainer"
            app:layout_constraintStart_toStartOf="@id/nameInputContainer"
            app:layout_constraintEnd_toEndOf="@id/nameInputContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceInput"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:helperText="@string/note_label"
            app:layout_constraintTop_toBottomOf="@id/priceInputContainer"
            app:layout_constraintStart_toStartOf="@id/nameInputContainer"
            app:layout_constraintEnd_toEndOf="@id/nameInputContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>